# Imaginer

./: .gitignore  .woodpecker.yml  PRESS.md  README.md  SEEN.md  bavarder.doap  bavarder.flatpak  imaginer.doap  meson.build  requirements.txt
. github/workflows/: build.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
build-aux/flatpak/: io.github.ImaginerApp.Imaginer.json  page.codeberg.Imaginer.Imaginer.json
data/: imaginer.gresource.xml  io.github.ImaginerApp.Imaginer.appdata.xml.in  io.github.ImaginerApp.Imaginer.desktop.in  io.github.ImaginerApp.Imaginer.gschema.xml  meson.build  page.codeberg.Imaginer.Imaginer.appdata.xml.in  page.codeberg.Imaginer.Imaginer.desktop.in  page.codeberg.Imaginer.Imaginer.gschema.xml
data/icons/: meson.build
data/ui/: help-overlay.blp  help-overlay.ui  preferences.blp  window.blp
po/: Imaginer.pot  LINGUAS  POTFILES  ar.po  az.po  cs.po  da.po  de.po  es.po  fa.po  fi.po  fr.po  hu.po  it.po  meson.build  nl.po  oc.po  pl.po  pt.po  ru.po  sv.po  ta.po  th.po  tr.po  uk.po  update-pot.sh  zh_Hans.po
src/: constants.py.in  imaginer.gresource.xml  imaginer.in  main.py  meson.build  preferences.py  window.blp  window.py
src/gtk/: help-overlay.blp
src/provider/: __init__.py  analogdiffusion.py  anything.py  base.py  custom.py  huggingface.py  meson.build  nitrodiffusion.py  openai.py  openjourney.py  portraitplus.py  stablediffusion.py  stablediffusionlocal.py  waifudiffusion.py
