
providers_dir = join_paths(moduledir, 'provider')

providers_sources = [
  '__init__.py',
  'analogdiffusion.py',
  'anything.py',
  'base.py',
  'custom.py',
  'huggingface.py',
  'nitrodiffusion.py',
  'openai.py',
  'openjourney.py',
  'portraitplus.py',
  'stablediffusion.py',
  'stablediffusionlocal.py',
  'waifudiffusion.py'
]

PY_INSTALLDIR.install_sources(providers_sources, subdir: providers_dir)
